--- a/gradle/libraries.gradle
+++ b/gradle/libraries.gradle
@@ -3,3 +3,6 @@ ext {
     libs = [:]
 }
 
+libs.junit = "junit:junit:4.7"
+libs.comonsLang = 'commons-lang:commons-lang:2.6'
+libs.jdeb = "org.vafer:jdeb:1.0.1"
