--- a/gradle/libraries.gradle
+++ b/gradle/libraries.gradle
@@ -7,3 +7,5 @@ libs.junit = "junit:junit:4.7"
 libs.comonsLang = 'commons-lang:commons-lang:2.6'
 libs.jdeb = "org.vafer:jdeb:1.0.1"
 libs.bcpg = "org.bouncycastle:bcpg-jdk15on:1.48"
+libs.commons_compress = "org.apache.commons:commons-compress:1.5"
+libs.slf4j_api = "org.slf4j:slf4j-api:1.7.4"
